<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/beige"
    android:backgroundTint="@color/beige">

    <Button
        android:id="@+id/homeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:backgroundTint="@color/brown"
        android:text="@string/homeText"
        android:textSize="18dp"
        app:cornerRadius="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/aboutUsButton"
        app:cornerRadius="0dp"
        app:layout_constraintStart_toEndOf="@+id/homeButton"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/brown"
        android:text="@string/aboutUsText"
        android:textSize="18dp"
        tools:layout_editor_absoluteX="192dp"
        tools:layout_editor_absoluteY="231dp" />

    <Button
        android:id="@+id/courseButton"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toStartOf="@+id/paymentPayment"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/brown"
        android:text="@string/coursesText"
        android:textSize="18dp"
        tools:layout_editor_absoluteX="136dp"
        tools:layout_editor_absoluteY="158dp" />

    <Button
        android:id="@+id/paymentPayment"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/brown"
        android:text="@string/paymentText"
        android:textSize="18dp"
        tools:layout_editor_absoluteX="105dp"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/aboutUsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aboutText"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="109dp"
        tools:layout_editor_absoluteY="95dp" />

</androidx.constraintlayout.widget.ConstraintLayout>