<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sunsetimage"
    android:backgroundTint="@color/beige">


    <RelativeLayout
        android:id="@+id/relativeLayout4"
        android:layout_width="340dp"
        android:layout_height="173dp"
        android:layout_centerInParent="true"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="21dp"
        android:background="@drawable/border"
        app:layout_constraintBottom_toTopOf="@+id/backButton5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/landscapingDescriptionText"
            android:layout_width="327dp"
            android:layout_height="158dp"
            android:text="@string/landscapingDescription"
            android:textColor="@color/black"
            android:textSize="19sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <TextView
        android:id="@+id/landscapingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="70dp"
        android:text="@string/landscapingText"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeButton" />

    <TextView
        android:id="@+id/landscapingPurposeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/landscapingPurposeText"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/landscapingText" />

    <Button
        android:id="@+id/homeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:backgroundTint="@color/brown"
        android:text="@string/homeText"
        android:textSize="18dp"
        app:cornerRadius="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/aboutUsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/brown"
        android:text="@string/aboutUsText"
        android:textSize="18dp"
        app:cornerRadius="0dp"
        app:layout_constraintStart_toEndOf="@+id/homeButton"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/courseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="1dp"
        android:backgroundTint="@color/brown"
        android:text="@string/coursesText"
        android:textSize="18dp"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toStartOf="@+id/paymentPayment"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/paymentPayment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/brown"
        android:text="@string/paymentText"
        android:textSize="18dp"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/backButton5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginBottom="21dp"
        android:backgroundTint="@color/orange"
        android:text="@string/backButtonText"
        android:textSize="20sp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="262dp"
        android:layout_height="258dp"
        android:layout_marginStart="79dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/landscapingPurposeText"
        app:srcCompat="@drawable/landscaping2" />
</androidx.constraintlayout.widget.ConstraintLayout>