<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sunsetimage"
    android:backgroundTint="@color/beige">


    <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="290dp"
        android:layout_height="173dp"
        android:layout_centerInParent="true"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="61dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/border"
        app:layout_constraintBottom_toTopOf="@+id/backButton9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/gardenMaintenaceDescription"
            android:layout_width="272dp"
            android:layout_height="163dp"
            android:text="@string/gardenMaintenanceDescription"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <TextView
        android:id="@+id/gardenMaintenanceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="4dp"
        android:text="@string/gardenMaintenanceText"
        android:textColor="@color/black"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeButton" />

    <TextView
        android:id="@+id/gardenMaintenacePurpose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="10dp"
        android:text="@string/gardenMaintenancePurposeText"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gardenMaintenanceText" />

    <Button
        android:id="@+id/homeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:backgroundTint="@color/brown"
        android:text="@string/homeText"
        android:textSize="18dp"
        app:cornerRadius="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/aboutUsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/brown"
        android:text="@string/aboutUsText"
        android:textSize="18dp"
        app:cornerRadius="0dp"
        app:layout_constraintStart_toEndOf="@+id/homeButton"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/courseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="1dp"
        android:backgroundTint="@color/brown"
        android:text="@string/coursesText"
        android:textSize="18dp"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toStartOf="@+id/paymentPayment"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/paymentPayment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/brown"
        android:text="@string/paymentText"
        android:textSize="18dp"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/backButton9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="49dp"
        android:backgroundTint="@color/orange"
        android:text="@string/backButtonText"
        android:textSize="20sp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="411dp"
        android:layout_height="213dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="7dp"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gardenMaintenacePurpose"
        app:srcCompat="@drawable/gardeningimage" />

</androidx.constraintlayout.widget.ConstraintLayout>