<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sunsetimage"
    android:backgroundTint="@color/beige"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/getStartedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="129dp"
        android:layout_marginEnd="129dp"
        android:layout_marginBottom="136dp"
        android:backgroundTint="@color/orange"
        android:text="@string/getStartedButtonText"
        android:textSize="20sp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/homeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:backgroundTint="@color/brown"
        android:text="@string/homeText"
        android:textSize="18dp"
        app:cornerRadius="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/aboutUsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/brown"
        android:text="@string/aboutUsText"
        android:textSize="18dp"
        app:cornerRadius="0dp"
        app:layout_constraintStart_toEndOf="@+id/homeButton"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/courseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/brown"
        android:text="@string/coursesText"
        android:textSize="18dp"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toStartOf="@+id/paymentPayment"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/paymentPayment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/brown"
        android:text="@string/paymentText"
        android:textSize="18dp"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="373dp"
        android:layout_height="329dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="109dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="61dp"
        app:layout_constraintBottom_toTopOf="@+id/getStartedButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeButton"
        app:srcCompat="@drawable/whatsapp_image_2024_09_17_at_14_01_06" />

</androidx.constraintlayout.widget.ConstraintLayout>